# urls_checker

./: CMakeLists.txt
cmake/: RecurseSubdirs.cmake
src/: CMakeLists.txt  main.cpp  traits.h
src/checkers_manager/: chekers_manager.cpp  chekers_manager.h
src/control_socket/: control_socket.cpp  control_socket.h
src/data_collector/: data_collector.cpp  data_collector.h
src/result_collector/: result_collector.cpp  result_collector.h
src/url_checker/: url_checker.cpp  url_checker.h
